fix jumping when going to settings because of 2px offset from stats container

--- a/src/features/stats/styles.scss
+++ b/src/features/stats/styles.scss
@@ -20,7 +20,6 @@
   transition: background .5s ease-in-out;
 
   width: 380px;
-  height: 64px;
 }
 
 .exp-bar-container {
